# study-space

./: .gitignore  README.md  package.json  pyrightconfig.json  start-studyspace.ps1  studyspace.code-workspace
services/: README.md
services/local-rag-ai-assistant/: README.md  api.py  collection_store.py  config.py  ingest.py  ollama_utils.py  pyrightconfig.json  rag_assistant.py  rag_pipeline.py  rag_utils.py  requirements.txt  test_api.py
services/transcript-whisper/: .env.example  .gitignore  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  transcribe_whisper.py  video_to_audio.py
services/transcript-whisper/.github/workflows/: ci.yml
services/transcript-whisper/src/transcript_whisper/: __init__.py  cli.py  main.py
services/transcript-whisper/src/transcript_whisper/api/: deps.py  router.py
services/transcript-whisper/src/transcript_whisper/api/routes/: transcription.py
services/transcript-whisper/src/transcript_whisper/core/: config.py  logging.py
services/transcript-whisper/src/transcript_whisper/schemas/: __init__.py  transcription.py
services/transcript-whisper/src/transcript_whisper/services/: audio.py  exporters.py  jobs.py  transcription.py
services/transcript-whisper/src/transcript_whisper/utils/: timecode.py
services/transcript-whisper/static/: index.html
services/transcript-whisper/tests/: test_app.py
web-app/: .gitignore  README.md  diff.txt  eslint.config.mjs  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
web-app/scripts/: import-pdf.cjs
web-app/src/app/: globals.css  (+1 more)
(+62 files in other folders)
